force-app/main/default/objects/Account/fields/FoundedIn__c.field-meta.xml
<CustomField>
    <fullName>FoundedIn__c</fullName>
    <description>Founded in</description>
    <inlineHelpText>Founded in</inlineHelpText>
    <label>Founded in</label>
    <type>Date</type>
</CustomField>