force-app/main/default/objects/Account/fields/LCSPGlobal__c.field-meta.xml
<CustomField>
    <fullName>LCSPGlobal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LCSP Global</description>
    <inlineHelpText>LCSP Global</inlineHelpText>
    <label>LCSP Global</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (LCSP Global)</relationshipLabel>
    <relationshipName>AccountsLCSPGlobal</relationshipName>
    <type>Lookup</type>
</CustomField>