force-app/main/default/objects/Account/fields/LCSPLocal__c.field-meta.xml
<CustomField>
    <fullName>LCSPLocal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LCSP Local</description>
    <inlineHelpText>LCSP Local</inlineHelpText>
    <label>LCSP Local</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (LCSP Local)</relationshipLabel>
    <relationshipName>AccountsLCSPLocal</relationshipName>
    <type>Lookup</type>
</CustomField>