force-app/main/default/objects/Account/fields/Smartnet__c.field-meta.xml
<CustomField>
    <fullName>Smartnet__c</fullName>
    <description>Smartnet</description>
    <inlineHelpText>Smartnet</inlineHelpText>
    <label>Smartnet</label>
    <length>10</length>
    <type>Text</type>
</CustomField>